# rag-template

./: financials.db  main.py  pyproject.toml
agent/chunk_enrichment/: llm_enrichment.py
agent/chunk_generation/: __init__.py  title_chunker.py
agent/embedder/: fast_embed_qdrant.py
agent/parser/: parse_html.py
documents/: generate_data.py  sample_small.txt
enriched_chunks/: enriched_chunks.json
ingestion/chunk_enrichment/: __init__.py  chunk_aggregator.py  llm_enrichment.py
ingestion/parser/: parse_html.py
llm/: llm_for_chunking.py  qwen_ollama_chunking.py
sec-edgar-filings/: revenue_summary.csv
test/: README.md  conftest.py  test_agent_chunk_aggregator.py  test_agent_chunking.py  test_agent_enrichment.py  test_chunk_aggregator.py  test_chunking.py  test_enrichment.py  test_full_workflow_integration.py  test_full_workflow_real.py  test_main_workflow.py  test_ollama_connection.py  test_qwen_integration.py  test_skip_enrichment.py
utils/: sqlite_db.py
